--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
 layout: home
 title: Home
 ---
+
+{% for post in site.posts limit:5 %}  
+  <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>  
+{% endfor %}  
